--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "coffee bin/serve.coffee"
+    "dev": "coffee bin/dev-server.coffee",
+    "clean": "rimraf ./dist"
   },
   "author": "",
   "license": "MIT",
@@ -16,6 +17,7 @@
     "coffee-script": "^1.10.0",
     "express": "^4.13.4",
     "html-webpack-plugin": "^2.9.0",
+    "rimraf": "^2.5.2",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1"
   },
