--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "not yet",
-    "dev": "coffee bin/dev-server.coffee",
+    "dev": "node bin/dev-server.js",
     "clean": "rimraf ./dist"
   },
   "author": "",
@@ -14,8 +14,9 @@
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "coffee-script": "^1.10.0",
+    "bluebird": "^3.3.1",
     "express": "^4.13.4",
+    "first-open-port": "^0.1.0",
     "html-webpack-plugin": "^2.9.0",
     "rimraf": "^2.5.2",
     "webpack": "^1.12.13",
