--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "html-webpack-plugin": "^2.9.0",
     "rimraf": "^2.5.2",
     "webpack": "^1.12.13",
-    "webpack-dev-middleware": "^1.5.1"
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.7.1"
   },
   "dependencies": {
     "react": "^0.14.7",
