--- a/package.json
+++ b/package.json
@@ -14,14 +14,11 @@
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "bluebird": "^3.3.1",
-    "express": "^4.13.4",
-    "first-open-port": "^0.1.0",
+    "browser-sync": "^2.11.1",
     "html-webpack-plugin": "^2.9.0",
     "rimraf": "^2.5.2",
     "webpack": "^1.12.13",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.7.1"
+    "webpack-dev-middleware": "^1.5.1"
   },
   "dependencies": {
     "react": "^0.14.7",
