--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "browser-sync": "^2.11.1",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.9.0",
     "rimraf": "^2.5.2",
     "webpack": "^1.12.13",
