--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.9.0",
+    "node-sass": "^3.4.2",
     "rimraf": "^2.5.2",
+    "sass-loader": "^3.1.2",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1"
   },
