--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "testing",
   "main": "index.js",
   "scripts": {
-    "test": "not yet",
+    "test": "mocha test src/scripts/**/*--test.*",
     "dev": "node bin/dev-server.js",
     "clean": "rimraf ./dist"
   },
@@ -14,11 +14,19 @@
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.6.0",
     "browser-sync": "^2.11.1",
+    "chai": "^3.5.0",
+    "chai-enzyme": "^0.4.1",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.9.0",
+    "ignore-styles": "^1.2.0",
+    "jsdom": "^8.1.0",
+    "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
+    "react-addons-test-utils": "^0.14.7",
     "rimraf": "^2.5.2",
     "sass-loader": "^3.1.2",
     "webpack": "^1.12.13",
@@ -27,5 +35,11 @@
   "dependencies": {
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
+  },
+  "babel": {
+    "presets": [
+      "react",
+      "es2015"
+    ]
   }
 }
