--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "testing",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test src/scripts/**/*--test.*",
-    "dev": "node bin/dev-server.js",
-    "clean": "rimraf ./dist"
+    "test": "make test"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.6.4",
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
@@ -23,11 +22,12 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.9.0",
     "ignore-styles": "^1.2.0",
+    "istanbul": "^1.0.0-alpha.2",
     "jsdom": "^8.1.0",
+    "lcov-summary": "^1.0.1",
     "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
     "react-addons-test-utils": "^0.14.7",
-    "rimraf": "^2.5.2",
     "sass-loader": "^3.1.2",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1"
