--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --opts config/mocha.opts",
-    "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- --opts config/mocha.opts",
+    "cover": "scripts/cover",
     "report": "cat coverage/lcov.info | lcov-summary",
     "serve": "node scripts/dev-server.js"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.6.4",
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
