--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha --opts config/mocha.opts",
     "cover": "scripts/cover",
     "report": "cat coverage/lcov.info | lcov-summary",
-    "serve": "node scripts/dev-server.js"
+    "serve": "node scripts/dev-server.js",
+    "lint:styles": "stylelint --config config/stylelint.js src/**/*.scss"
   },
   "author": "",
   "license": "MIT",
@@ -31,6 +32,8 @@
     "node-sass": "^3.4.2",
     "react-addons-test-utils": "^0.14.7",
     "sass-loader": "^3.1.2",
+    "stylelint": "^4.4.0",
+    "stylelint-config-standard": "^3.0.0",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1"
   },
