--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "ignore-styles": "^1.2.0",
     "istanbul": "^1.0.0-alpha.2",
+    "kirei-css": "0.1.0",
     "lcov-summary": "^1.0.1",
     "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
+    "postcss-import": "8.0.2",
+    "postcss-loader": "0.8.2",
     "react-addons-test-utils": "^0.14.7",
     "redbox-react": "1.2.2",
     "sass-loader": "^3.1.2",
