stylelint conf -> yaml

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "serve:coverage": "scripts/serve-coverage.js",
     "serve": "node scripts/dev-server.js",
     "dev": "./scripts/dev.js",
-    "lint:styles": "stylelint --config configs/stylelint.js src/**/*.scss",
+    "lint:styles": "stylelint --config configs/stylelint.yml src/**/*.css",
     "lint:scripts": "eslint --config configs/eslint.yml 'src/**/*.js?(x)'"
   },
   "author": "",
