--- a/package.json
+++ b/package.json
@@ -31,19 +31,17 @@
     "eslint-config-airbnb": "^6.0.2",
     "eslint-plugin-react": "^4.1.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "fs-extra": "0.26.7",
+    "html-webpack-plugin": "2.12.0",
     "ignore-styles": "^1.2.0",
     "istanbul": "^1.0.0-alpha.2",
     "kirei-css": "0.1.0",
     "lcov-summary": "^1.0.1",
     "mocha": "^2.4.5",
-    "node-sass": "^3.4.2",
     "postcss-import": "8.0.2",
     "postcss-loader": "0.8.2",
     "react-addons-test-utils": "^0.14.7",
     "redbox-react": "1.2.2",
     "rimraf": "2.5.2",
-    "sass-loader": "^3.1.2",
     "style-loader": "0.13.0",
     "stylelint": "^4.4.0",
     "stylelint-config-standard": "^3.0.0",
