--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "testing",
   "main": "index.js",
   "scripts": {
-    "build": "./scripts/build.js",
+    "start": "scripts/start.js",
     "test": "mocha --opts configs/mocha.opts",
-    "cover": "scripts/cover",
-    "report": "cat coverage/lcov.info | lcov-summary",
-    "serve:coverage": "scripts/serve-coverage.js",
-    "dev": "./scripts/dev.js",
-    "lint:styles": "stylelint --config configs/stylelint.yml src/**/*.css",
+    "cover": "istanbul cover --config configs/istanbul.yml _mocha -- --opts configs/mocha.opts",
+    "cover:report": "cat coverage/lcov.info | lcov-summary",
+    "cover:serve": "scripts/serve-coverage.js",
+    "clean": "npm-run-all clean:*",
+    "clean:dist": "rimraf dist",
+    "clean:coverage": "rimraf coverage",
+    "build": "npm-run-all clean:dist build:compile",
+    "build:compile": "scripts/build.js",
+    "lint": "npm-run-all lint:styles lint:scripts",
+    "lint:styles": "stylelint --config configs/stylelint.yml 'src/styles/**/*.css'",
     "lint:scripts": "eslint --config configs/eslint.yml 'src/**/*.js?(x)'"
   },
   "author": "",
@@ -37,6 +42,7 @@
     "kirei-css": "0.1.0",
     "lcov-summary": "^1.0.1",
     "mocha": "^2.4.5",
+    "npm-run-all": "1.6.0",
     "postcss-import": "8.0.2",
     "postcss-loader": "0.8.2",
     "react-addons-test-utils": "^0.14.7",
