minify html for dist

--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "test": "mocha --opts configs/mocha.opts",
     "cover": "istanbul cover --config configs/istanbul.yml _mocha -- --opts configs/mocha.opts",
     "cover:report": "cat coverage/lcov.info | lcov-summary",
-    "cover:serve": "scripts/serve-coverage.js",
     "clean": "npm-run-all clean:*",
     "clean:dist": "rimraf dist",
     "clean:coverage": "rimraf coverage",
     "build": "npm-run-all clean:dist build:compile",
     "build:compile": "scripts/build.js",
+    "serve:coverage": "scripts/serve-coverage.js",
+    "serve:build": "browser-sync start --server dist --no-open",
     "lint": "npm-run-all lint:styles lint:scripts",
     "lint:styles": "stylelint --config configs/stylelint.yml 'src/styles/**/*.css'",
     "lint:scripts": "eslint --config configs/eslint.yml 'src/**/*.js?(x)'"
