add html parsing to build script

--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "eslint-config-airbnb": "^6.0.2",
     "eslint-plugin-react": "^4.1.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "2.12.0",
+    "html-minifier": "1.3.0",
     "ignore-styles": "^1.2.0",
     "istanbul": "^1.0.0-alpha.2",
+    "jsdom": "8.1.0",
     "kirei-css": "0.1.0",
     "lcov-summary": "^1.0.1",
     "mocha": "^2.4.5",
