--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "testing",
   "main": "index.js",
   "scripts": {
-    "start": "scripts/start.js",
+    "start": "./scripts/dev-server.js",
     "test": "mocha",
     "test:verbose": "npm run -s test -- -R spec",
     "cover": "istanbul cover --config configs/istanbul.yml _mocha",
@@ -30,7 +30,6 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "6.5.0",
     "babel-register": "^6.6.0",
-    "browser-sync": "^2.11.1",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.4.1",
     "chokidar-cli": "1.2.0",
@@ -40,7 +39,9 @@
     "eslint": "^2.2.0",
     "eslint-config-airbnb": "^6.0.2",
     "eslint-plugin-react": "^4.1.0",
+    "express": "4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "first-open-port": "0.1.0",
     "html-minifier": "1.3.0",
     "ignore-styles": "^1.2.0",
     "istanbul": "^1.0.0-alpha.2",
@@ -53,7 +54,6 @@
     "postcss-import": "8.0.2",
     "postcss-loader": "0.8.2",
     "react-addons-test-utils": "^0.14.7",
-    "redbox-react": "1.2.2",
     "rimraf": "2.5.2",
     "style-loader": "0.13.0",
     "stylelint": "^4.4.0",
