move eslint conf into root; find open port for dev server

--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "serve:build": "browser-sync start --server dist --no-open",
     "lint": "npm-run-all lint:styles lint:scripts",
     "lint:styles": "stylelint --config configs/stylelint.yml 'src/styles/**/*.css'",
-    "lint:scripts": "eslint --config configs/eslint.yml 'src/**/*.js?(x)'",
+    "lint:scripts": "eslint 'src/**/*.js?(x)' 'scripts/**/*.js'",
     "dev": "chokidar 'src/**/*.{js,jsx,html}' -c 'clear && npm-run-all lint test'"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "6.6.5",
+    "babel-eslint": "6.0.0-beta.6",
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
@@ -36,7 +37,7 @@
     "clear-cli": "1.0.1",
     "css-loader": "^0.23.1",
     "enzyme": "^2.0.0",
-    "eslint": "^2.2.0",
+    "eslint": "2.4.0",
     "eslint-config-airbnb": "^6.0.2",
     "eslint-plugin-react": "^4.1.0",
     "express": "4.13.4",
