--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "eslint": "2.4.0",
     "eslint-config-airbnb": "^6.0.2",
     "eslint-plugin-react": "^4.1.0",
-    "express": "4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
-    "first-open-port": "0.1.0",
     "html-minifier": "1.3.0",
     "ignore-styles": "^1.2.0",
     "istanbul": "^1.0.0-alpha.2",
@@ -60,7 +58,7 @@
     "stylelint": "^4.4.0",
     "stylelint-config-standard": "^3.0.0",
     "webpack": "^1.12.13",
-    "webpack-dev-middleware": "^1.5.1",
+    "webpack-dev-middleware": "github:webpack/webpack-dev-middleware",
     "webpack-hot-middleware": "2.10.0"
   },
   "dependencies": {
