--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "stylelint": "^4.4.0",
     "stylelint-config-standard": "^3.0.0",
     "webpack": "^1.12.13",
-    "webpack-dev-middleware": "1.5.1",
+    "webpack-dev-middleware": "github:webpack/webpack-dev-middleware",
     "webpack-hot-middleware": "2.10.0"
   },
   "dependencies": {
